# Auto-Agent

./: .gitignore  GEMINI.md  README.md  cli.py  grand_test.py  pen_test.py  pyproject.toml  test_advanced.py  test_fs.py  test_lines.py
auto_agent/: __init__.py  cli.py
auto_agent/core/: backend.py  logger.py  prompt.py  validator.py
auto_agent/engine/: executor.py  loop.py
auto_agent/tools/: filesystem.py
test_workspace_advanced/: MEMORY.md  search_test.txt  symbols.py
